gke-fleets-with-config-sync-and-argo-rollouts/gke-poc-config-sync/region-clusters-config/us-west-clusters-config/team-1-rollout-demo-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rollout-demo-destrule
  namespace: rollout-demo
  annotations:
    configmanagement.gke.io/cluster-selector: selector-us-west1
spec:
  host: rollout-demo-stable.rollout-demo.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
    loadBalancer:
      simple: ROUND_ROBIN
      localityLbSetting:
        enabled: true
        failover:
          - from: us-west1
            to: us-central1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1m
